--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <h1 class="name"></h1>
-    <section class="body"></section>
+        <header class="header">
+            <div class="container">
+                <h1 class="header__title"> My name: Kosntantin</h1>
+                <div class="header__text">About me</div>
+            </div>
+        </header>
+        <main class="main">
+            <section class="info">
+                <div class="container">
+                    <div class="info__education">Universcity</div>
+                    <div class="info__exp">0</div>
+                    <div class="info__lasguages">Russian</div>
+                    <div class="info__skiils"></div>
+                </div>
+            </section>
+            <section class="contacts">
+               <div class="container">
+                    <ul class="contacts__content">
+                        <li>phone number</li>
+                        <li>telegramm</li>
+                        <li>email</li>
+                    </ul>
+               </div>
+            </section>
+        </main>
 </body>
 </html>
