feat: add html, css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,83 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-        
+    <div class="wrapper">
+        <header class="header">
+            <div class="container">
+                <nav class="menu">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a href="" class="menu__link">ABOUT ME</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="" class="menu__link">EDUCATION</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="" class="menu__link">EXPERIENCE</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="" class="menu__link">LANGUAGES</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="" class="menu__link">SKILLS</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="" class="menu__link">CONTACTS</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <main class="main">   
+            <div class="container">
+                <section class="info">                  
+                        <img class="info__img" src="./images/avatar-1.png" alt="there was a picture">
+                        <div class="info__title">
+                            <h1 class="info__name">KONSTANTIN</h1>
+                            <p class="info__prof">WEB DEVELOPER</p>
+                        </div>
+                        <p class="info__about-me"> <span>About me:</span> Novice web developer from St. Petersburg</p>
+                        <div class="info__education education">
+                            <h2 class="education__title block-title">EDUCATION</h2>
+                            <div class="education__text">
+                                <h3>Saint Petersburg State Forestry University</h3>
+                                <p>Design engineer diploma</p>
+                            </div>
+                        </div>
+                        <div class="info__exp exp">
+                            <h2 class="exp__title block-title">EXPERIENCE</h2>
+                            <p class="exp__work">I have no experience in web development</p>
+                        </div>
+                        <div class="info__languages languages">
+                            <h2 class="languages__title block-title">LANGUAGES</h2>
+                            <label for="russian">Russian</label>
+                            <progress class="languages__level" id="russian" value="100" max="100"></progress>
+                            <label for="english">English</label>
+                            <progress class="languages__level" id="english" value="25" max="100"></progress>
+                        </div>
+                        <div class="info__skills skills">
+                            <h2 class="skills__title block-title">SKILLS</h2>
+                            <p class="skills__level">HTML</p>
+                            <p class="skills__level">CSS</p>
+                            <p class="skills__level">JavaScript</p>
+                        </div>
+                        <div class="info__contacts contacts">
+                            <h2 class="contacts__title block-title">CONTACTS</h2>
+                            <div class="contacts__data">
+                                <p>Phone number: +8***-***-**-**</p>
+                                <p>Adress: St.Petersburg, Russia</p>
+                                <p>Email: my-email@google.com</p>
+                            </div>
+                        </div>    
+                </section>
+            <div>
+        </main>
+        <footer class="footer">
+            <a href="https://github.com/Fonik23" class="footer__github-link " target="_blank">My Github</a>
+            <a href="https://rs.school/js/" class="footer__rs-school-link" target="_blank"><img src="/images/rs-logo.svg" alt="rs-school logo" width="40" height="40"></a>
+            <p class="footer__year">2023</p>
+           
+        </footer>
+    </div>
 </body>
 </html>
