feat: add folder content, add footer, add dottes

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </header>
         <main class="main">   
             <div class="container">
-                <section class="info">                  
-                        <img class="info__img" src="./images/avatar-1.png" alt="there was a picture">
+                <section class="main__info info">                  
+                        <img class="info__img" src="./images/content/avatar-1.png" alt="there was a picture">
                         <div class="info__title">
                             <h1 class="info__name">KONSTANTIN</h1>
                             <p class="info__prof">WEB DEVELOPER</p>
@@ -56,33 +56,75 @@
                         </div>
                         <div class="info__languages languages">
                             <h2 class="languages__title block-title">LANGUAGES</h2>
-                            <label for="russian">Russian</label>
-                            <progress class="languages__level" id="russian" value="100" max="100"></progress>
-                            <label for="english">English</label>
-                            <progress class="languages__level" id="english" value="25" max="100"></progress>
+                            <div class="languages__box">
+                                <div class="languages__subtitle">RUSSIAN</div>
+                                <div class="languages__dot-box">
+                                    <div class="languages__dot dot"></div>
+                                    <div class="languages__dot dot"></div>
+                                    <div class="languages__dot dot"></div>
+                                    <div class="languages__dot dot"></div>
+                                    <div class="languages__dot dot"></div>
+                                </div>
+                            </div>
+                            <div class="languages__box">
+                                <div class="languages__subtitle">ENGLISH</div>
+                                <div class="languages__dot-box">
+                                    <div class="languages__dot dot"></div>
+                                    <div class="languages__dot dot "></div>
+                                    <div class="languages__dot dot dot_white_color"></div>
+                                    <div class="languages__dot dot dot_white_color"></div>
+                                    <div class="languages__dot dot dot_white_color"></div>
+                                </div>
+                            </div>
                         </div>
                         <div class="info__skills skills">
                             <h2 class="skills__title block-title">SKILLS</h2>
-                            <p class="skills__level">HTML</p>
-                            <p class="skills__level">CSS</p>
-                            <p class="skills__level">JavaScript</p>
+                            <div class="skills__box">
+                                <div class="skills__subtitle">HTML</div>
+                                <div class="skills__dot-box">
+                                    <div class="skills__dot dot"></div>
+                                    <div class="skills__dot dot dot_white_color"></div>
+                                    <div class="skills__dot dot dot_white_color"></div>
+                                    <div class="skills__dot dot dot_white_color"></div>
+                                    <div class="skills__dot dot dot_white_color"></div>
+                                </div>
+                            </div>
+                            <div class="skills__box">
+                                <div class="skills__subtitle">CSS</div>
+                                <div class="skills__dot-box">
+                                    <div class="skills__dot dot"></div>
+                                    <div class="skills__dot dot dot_white_color"></div>
+                                    <div class="skills__dot dot dot_white_color"></div>
+                                    <div class="skills__dot dot dot_white_color"></div>
+                                    <div class="skills__dot dot dot_white_color"></div>
+                                </div>
+                            </div>
+                            <div class="skills__box">
+                                <div class="skills__subtitle">JavaScript</div>
+                                <div class="skills__dot-box">
+                                    <div class="skills__dot dot"></div>
+                                    <div class="skills__dot dot dot_white_color"></div>
+                                    <div class="skills__dot dot dot_white_color"></div>
+                                    <div class="skills__dot dot dot_white_color"></div>
+                                    <div class="skills__dot dot dot_white_color"></div>
+                                </div>
+                            </div>
                         </div>
                         <div class="info__contacts contacts">
                             <h2 class="contacts__title block-title">CONTACTS</h2>
-                            <div class="contacts__data">
-                                <p>Phone number: +8***-***-**-**</p>
-                                <p>Adress: St.Petersburg, Russia</p>
-                                <p>Email: my-email@google.com</p>
-                            </div>
+                            <ul class="contacts__data">
+                                <li>Phone number: +8***-***-**-**</li>
+                                <li>Adress: St.Petersburg, Russia</li>
+                                <li>Email: my-email@google.com</li>
+                            </ul>
                         </div>    
                 </section>
-            <div>
+            </div>
         </main>
         <footer class="footer">
             <a href="https://github.com/Fonik23" class="footer__github-link " target="_blank">My Github</a>
-            <a href="https://rs.school/js/" class="footer__rs-school-link" target="_blank"><img src="/images/rs-logo.svg" alt="rs-school logo" width="40" height="40"></a>
-            <p class="footer__year">2023</p>
-           
+            <a href="https://rs.school/js/" class="footer__rs-school-link" target="_blank"><img src="../rsschool-cv/images/rs-logo.svg" alt="rs-school logo" width="40" height="35"></a>
+            <p class="footer__year">2023</p>          
         </footer>
     </div>
 </body>
